add lua 5.1 support
removes cmake package requirement to lua 5.4
and adds `luaL_setfuncs` and `luaL_newlib` aliases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.0)
 project(srp VERSION 0.0.1)
 
-find_package(Lua 5.4 REQUIRED)
+find_package(Lua REQUIRED)
 find_package(OpenSSL REQUIRED)
 
 include(GNUInstallDirs)
 
-include_directories(${LUA_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR})
+include_directories(${LUA_INCLUDE_DIR} ${OPENSSL_INCLUDE_DIR} src/include)
 
 string(REGEX MATCH "[0-9]+" SOVERSION ${CMAKE_PROJECT_VERSION})
 
