--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,12 +5,12 @@ if (LUA54)
   find_package(Lua 5.4 EXACT REQUIRED)
 elseif (LUA53)
   find_package(Lua 5.3 EXACT REQUIRED)
-elseif (LUA52)
-  find_package(Lua 5.2 EXACT REQUIRED)
-elseif (LUA51)
-  find_package(Lua 5.1 EXACT REQUIRED)
 else ()
   find_package(Lua REQUIRED)
+
+  if (${LUA_VERSION_MAJOR} EQUAL 5 AND ${LUA_VERSION_MINOR} LESS 3)
+    message(FATAL_ERROR "Lua supports required bitwise operations starting with lua 5.3")
+  endif ()
 endif ()
 
 find_package(OpenSSL REQUIRED)
