--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,8 +14,8 @@ set_target_properties(hash PROPERTIES PREFIX "")
 
 target_link_libraries(hash ${OPENSSL_LIBRARIES})
 
-set(LUA_INSTALL_DATAROOTDIR ${CMAKE_INSTALL_DATAROOTDIR}/lua/${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR}/wow)
-set(LUA_INSTALL_LIBDIR ${CMAKE_INSTALL_LIBDIR}/lua/${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR})
+set(LUA_INSTALL_DATAROOTDIR ${CMAKE_INSTALL_DATAROOTDIR}/lua/${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR}/wow CACHE STRING "lua module install path")
+set(LUA_INSTALL_LIBDIR ${CMAKE_INSTALL_LIBDIR}/lua/${LUA_VERSION_MAJOR}.${LUA_VERSION_MINOR} CACHE STRING "lua c-module install path")
 
 install(TARGETS bignum DESTINATION ${LUA_INSTALL_LIBDIR})
 install(TARGETS hash DESTINATION ${LUA_INSTALL_LIBDIR})
